# skeletonTrackerVSNI

./: .gitignore  CMakeLists.txt  README.md  initData.sh
data/: FeatureExtraction.ini  dataToLoadOpenCVFile.yml  skeletonTrackerVSNI.conf
include/: NISkeletonParser.h  NISkeletonProc.h  NISkeletonType.h  skeletonTrackerVSNI.h
src/: NISkeletonProc.cpp  skeletonTrackerVSNI.cpp
